--- a/composer.json
+++ b/composer.json
@@ -6,13 +6,16 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "barryvdh/laravel-dompdf": "^3.0",
         "filament/filament": "^3.2",
         "filament/spatie-laravel-media-library-plugin": "^3.2",
         "laravel/framework": "^11.9",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
+        "maatwebsite/excel": "^3.1",
         "milon/barcode": "^11.0",
-        "tomatophp/filament-invoices": "^1.0"
+        "tomatophp/filament-locations": "^1.0",
+        "tomatophp/filament-types": "^1.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
