Added rfid points

--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,8 @@
         "laravel/tinker": "^2.9",
         "maatwebsite/excel": "^3.1",
         "milon/barcode": "^11.0",
+        "psr/simple-cache": "^2.0",
+        "pxlrbt/filament-excel": "^2.3",
         "tomatophp/filament-locations": "^1.0",
         "tomatophp/filament-types": "^1.0"
     },
